# mindnode-mcp

./: .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
src/mindnode_mcp/: __init__.py  document.py  paths.py  server.py
tests/: smoke.py
